--- a/app/sass/_layout.sass
+++ b/app/sass/_layout.sass
@@ -33,6 +33,7 @@ header
 	border-top: 75px solid $blue
 	border-bottom: 75px solid transparent
 	border-right: 250px solid transparent
+	pointer-events: none
 	img
 		width: 200px
 		position: relative
